--- a/themes/wordyintrovert/style.css
+++ b/themes/wordyintrovert/style.css
@@ -473,6 +473,7 @@ body {
 
 header {
 	/*background: #ccc;*/
+    border-bottom: 1px solid #272727;
 	height: 80px;
 }
 
@@ -484,10 +485,18 @@ a {
 	display: none;
 }
 
+/*---------- min-width 768 px ----------*/
 
-/*------------------------------------------------------------------------------
-  3.0 - Header
-------------------------------------------------------------------------------*/
+@media screen and (min-width: 768px) {
+    header {
+        border-bottom: none;
+    }
+}
+
+
+    /*------------------------------------------------------------------------------
+      3.0 - Header
+    ------------------------------------------------------------------------------*/
 
 #logo {
 	/*background: #ccc;*/
@@ -584,7 +593,7 @@ nav {
 
 #menu-items {
 	position: absolute;
-	right: 0px;
+	right: 0;
 	top: 80px;
 	z-index: 9999;
 }
@@ -599,7 +608,7 @@ nav ul {
 }
 
 nav ul li:first-child {
-	border-top: 1px solid #aaa;
+	border-top: 1px solid #272727;
 }
 
 nav ul li {
@@ -629,6 +638,10 @@ nav a {
 
 	#logo {
 		display: none;
+	}
+
+	nav {
+		margin-right: 10%;
 	}
 
 	#menu-button {
@@ -677,12 +690,15 @@ nav a {
 	}
 
 	nav a:hover {
-		background: #f5f5f5;
+		background: #272727;
+        color: #fff;
 	}
 
 	.selected {
-		background: #f5f5f5;
-		border-bottom: 2px solid #999;
+		background: #272727;
+        border-left: 1px solid #555;
+		border-right: 1px solid #555;
+        color: #fff;
 	}
 
 }
@@ -705,7 +721,8 @@ nav a {
 @media screen and (min-width: 768px) {
 
 	#intro-strip {
-		background: url(images/squares.png) repeat center top;
+		/*background: url(images/squares.png) repeat center top;*/
+		background: url(images/tiles.png) repeat center top;
 		display: block;
 		height: 364px;
 	}
@@ -718,6 +735,7 @@ nav a {
 	}
 
 	#intro-text {
+		color: #fff;
 		float: left;
 		margin-top: 25px;
 	}
