--- a/themes/wordyintrovert/style.css
+++ b/themes/wordyintrovert/style.css
@@ -716,6 +716,76 @@ nav a {
 	display: none;
 }
 
+#post-content {
+    /*background: #aa0000;*/
+    width: 100%;
+}
+
+#post-list {
+    margin: 30px;
+}
+
+#post-snippet {
+    height: 212px;
+}
+
+img.wp-post-image, .video-thumbnail {
+    display: block;
+    height: 212px;
+    width: 270px;
+}
+
+.post-thumbnail {
+    display: inline-block;
+    float: left;
+    height: 212px;
+    width: 270px;
+}
+
+.post-metadata{
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.post-date-box {
+    display: inline-block;
+    float: left;
+}
+
+.post-date-box-top {
+    background: #f6f6f6;
+    border: 1px solid #ccc;
+    font-size: 1.625em;
+    padding: 8px;
+    text-align: center;
+}
+
+.post-date-box-bottom {
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    font-size: 1.2em;
+    padding: 5px;
+    text-align: center;
+}
+
+.post-info {
+    float: right;
+    margin-left: 25px;
+}
+
+.post-title {
+    font-size: 2.625em;
+}
+
+.post-title a {
+    color: #000;
+}
+
+.post-title a:hover {
+    color: #777;
+}
+
 /*---------- min-width 768 px ----------*/
 
 @media screen and (min-width: 768px) {
