--- a/themes/wordyintrovert/style.css
+++ b/themes/wordyintrovert/style.css
@@ -883,13 +883,47 @@ img.wp-post-image, .video-thumbnail {
     width: 224px;
 }
 
-#subscribe {
+#subscribe-box {
     border: 1px solid #d9d9d9;
     display: inline-block;
     height: 248px;
     margin-top: 20px;
     text-align: center;
     width: 298px;
+}
+
+#subscribe-span {
+    display: block;
+    font-size: 1.8rem;
+    letter-spacing: 4px;
+    margin-top: 34px;
+}
+
+#subscribe-box p {
+    font-size: 1.5rem;
+    line-height: 2.0rem;
+    margin: 22px 26px 20px 35px;
+    text-align: left;
+}
+
+#newsletter-email-input {
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    height: 34px;
+    margin: auto;
+    outline: none;
+    padding: 2px 8px;
+    width: 220px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),
+                0 0 5px rgba(0,0,0,0);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+#newsletter-email-input:focus {
+    border-color: #9ecaed;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0),
+                0 0 5px #9ecaed;
 }
 
 
