Remove the word 'Menu' from the mobile menu button and increase the size. Looks much better and doesn't have any problems on Chrome mobile.

--- a/themes/wordyintrovert/style.css
+++ b/themes/wordyintrovert/style.css
@@ -560,42 +560,41 @@ nav {
 
 #menu-button {
 /* 	background-color: #444444; */
+    border: 1px solid #d9d9d9;
 	color: #555;
 	cursor: pointer;
+    display: inline-block;
 	float: right;
 	font-size: 1.6rem;
-	height: 80px;
-	margin-right: 10px;
-}
-
-#menu-button span {
-	float: left;
-	/*display: block;*/
-	padding-top: 3.2rem;
+	height: 30px;
+	margin-right: 20px;
+	margin-top: 18px;
+    padding: 6px;
+    width: 38px;
 }
 
 #bars {
     display: inline-block;
 	float: right;
-	margin-left: 6px;
-	padding-top: 3.1rem;
+	/*margin-top: 4px;*/
+	/*padding-top: 3.1rem;*/
 }
 
 .menu-bar {
-	background-color: #555;
-	height: 4px;
-	width: 22px;
+	background-color: #b8b8b8;
+	height: 6px;
+	width: 38px;
 }
 
 #bar1,
 #bar2 {
-	margin-bottom: 3px;
+	margin-bottom: 6px;
 }
 
 #menu-items {
 	position: absolute;
-	right: 0;
-	top: 80px;
+	right: 20px;
+	top: 62px;
 	z-index: 9999;
 }
 
